; ModuleID = '/home/carl/AnghaBench/vim.js/src/extr_fileio.c_trigger_cursorhold.c'
source_filename = "/home/carl/AnghaBench/vim.js/src/extr_fileio.c_trigger_cursorhold.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@did_cursorhold = common dso_local global i32 0, align 4
@Recording = common dso_local global i32 0, align 4
@typebuf = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@NORMAL_BUSY = common dso_local global i32 0, align 4
@INSERT = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @trigger_cursorhold() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i32, i32* @did_cursorhold, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %27, label %5

5:                                                ; preds = %0
  %6 = call i64 (...) @has_cursorhold()
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %27

8:                                                ; preds = %5
  %9 = load i32, i32* @Recording, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %27, label %11

11:                                               ; preds = %8
  %12 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @typebuf, i32 0, i32 0), align 8
  %13 = icmp eq i64 %12, 0
  br i1 %13, label %14, label %27

14:                                               ; preds = %11
  %15 = call i32 (...) @get_real_state()
  store i32 %15, i32* %2, align 4
  %16 = load i32, i32* %2, align 4
  %17 = load i32, i32* @NORMAL_BUSY, align 4
  %18 = icmp eq i32 %16, %17
  br i1 %18, label %24, label %19

19:                                               ; preds = %14
  %20 = load i32, i32* %2, align 4
  %21 = load i32, i32* @INSERT, align 4
  %22 = and i32 %20, %21
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %24, label %26

24:                                               ; preds = %19, %14
  %25 = load i32, i32* @TRUE, align 4
  store i32 %25, i32* %1, align 4
  br label %29

26:                                               ; preds = %19
  br label %27

27:                                               ; preds = %26, %11, %8, %5, %0
  %28 = load i32, i32* @FALSE, align 4
  store i32 %28, i32* %1, align 4
  br label %29

29:                                               ; preds = %27, %24
  %30 = load i32, i32* %1, align 4
  ret i32 %30
}

declare dso_local i64 @has_cursorhold(...) #1

declare dso_local i32 @get_real_state(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
